--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,11 +11,8 @@
     <div class='container'>
       <header class='clearfix'>
         <div class='links btn-group pull-right'>
-          <a class='btn btn-default' href='https://github.com/adam-incuna'>
+          <a class='btn btn-default' href='https://github.com/adam-thomas'>
             GitHub
-          </a>
-          <a class='btn btn-default' href='mailto:adam@incuna.com'>
-            Email
           </a>
         </div>
         <h1 id='logo'><a href='/'>Adam Thomas</a></h1>
